--- a/frontend_moradasy/src/index.css
+++ b/frontend_moradasy/src/index.css
@@ -114,6 +114,31 @@ input{
     box-shadow: 0 0 10px rgba(52, 11, 68, 0.5);
 }
 
+.btn-especial{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: solid 1px  rgb(52, 11, 68);
+    border-radius: 20px;
+    text-decoration: none;
+    background-color: rgb(133, 123, 132);
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    font-weight: 600;
+    box-shadow: 0 0 10px rgba(52, 11, 68, 0.5);
+}
+
+.btn-especial:hover{
+    transition: all 0.6s ease-in-out;
+    width: 100%;
+    background-color: rgb(4, 1, 5);
+    color: rgb(247, 247, 247);
+    border: solid 1px  rgb(52, 11, 68);
+    box-shadow: 0 0 10px rgba(52, 11, 68, 0.5);
+}
+
 .btn-login:hover{
     transition: all 0.6s ease-in-out;
     width: 100%;
@@ -125,8 +150,7 @@ input{
 }
 
  .login{
-    width: 100%;
-    height:100vh;
+      min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -161,7 +185,8 @@ input{
 
 
 .contenedor-login{
-    min-width: 500px;
+     width: 40%;
+      max-width: 500px;
     min-height: 450px;
     padding: 0% 20px;
     border-radius: 10px;
@@ -179,4 +204,93 @@ form{
     width: 100%;
 }
 
+.prueba{
+  background-color: rgb(32, 31, 31) !important;
+}
 
+.p-principal{
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.producto-admin {
+  background-color: rgb(134, 114, 134);
+  display: flex;
+  flex-direction: row;
+  width: 100%; /* Ajusta el ancho para tener en cuenta el margen */
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px;
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+
+.agregar-producto {
+  align-self: flex-end;
+  background-color: rgb(150, 245, 150);
+  color: black;
+  padding: 2px 30px;
+  font-weight: 900;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+
+.editar-producto {
+  background-color: rgb(150, 245, 150);
+  color: black;
+  padding: 8px 40px;
+  font-weight: 900;
+  text-decoration: none;
+  margin: 9px;
+}
+
+.borrar-producto {
+  background-color: rgb(250, 144, 137);
+  color: black;
+  padding: 8px 40px;
+  font-weight: 900;
+  text-decoration: none;
+  margin: 9px;
+}
+
+.imagen-icono-producto {
+  width: 100px;
+  border-radius: 25px;
+}
+
+.producto-info {
+  font-size: 20px;
+}
+.agregar-producto, .editar-producto, .borrar-producto{
+border-radius: 20px;
+}
+
+.agregar-producto:hover, .editar-producto:hover, .borrar-producto:hover {
+  -webkit-box-shadow: -1px -2px 20px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: -1px -2px 20px 0px rgba(0,0,0,0.75);
+box-shadow: -1px -2px 20px 0px rgba(0,0,0,0.75);
+transition: all ease-in-out .3s;
+background-color: #fdfdfd;
+}
+
+.contenedor-p {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+@media (max-width: 800px) {
+  .contenedor-login {
+    padding: 1.5rem 0.5rem;
+   width: 100%;
+  }
+  .h1-principal {
+    font-size: 1.5rem;
+  }
+}
