--- a/frontend_moradasy/src/index.css
+++ b/frontend_moradasy/src/index.css
@@ -6,6 +6,7 @@ html {
   margin:0px;
   width: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 *{
@@ -38,9 +39,7 @@ body, main {
   color: rgb(0, 0, 0);
 }
 
-header{
-  width: 100%;
-}
+
 
  /* .caja-contenido{
     width: 100%;
@@ -63,17 +62,27 @@ header{
   color: white;
 }
 
+.color-especial-button{
+  background-color:  rgb(52, 11, 68) !important;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
 .color-especial a{
   color: white;
 }
 
 .iconos-especiales{
-  font-size: 30px;
+  font-size: 35px;
+  color: rgb(80, 7, 99);
 }
 
 .iconos-especiales:hover{
   cursor: pointer;
-  color: blueviolet;
+  color: rgb(70, 63, 63);
 }
 
 
@@ -200,8 +209,15 @@ input{
 }
 
 
-form{
+.form-login{
     width: 100%;
+} 
+
+
+.form-busqueda input{
+  width: 100%;
+  
+  border-radius: 35px;
 }
 
 .prueba{
@@ -283,6 +299,9 @@ background-color: #fdfdfd;
   flex-direction: column;
   justify-content: space-between;
 }
+
+ 
+
 
 
 @media (max-width: 800px) {
