--- a/frontend_moradasy/src/index.css
+++ b/frontend_moradasy/src/index.css
@@ -235,7 +235,7 @@ input{
   background-color: rgb(134, 114, 134);
   display: flex;
   flex-direction: row;
-  width: 100%; /* Ajusta el ancho para tener en cuenta el margen */
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   margin: 5px;
